tests/paczka1/small_fuzzy/17390803.err
Error in line 2: 6Kw A2 38,8
Error in line 5: 6Kw A98 64,3
Error in line 8: p8jNMEOBN A2 86,1
Error in line 4: mRXwre S809 49,8
